[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'RogueORM'
version = '0.0.1'
description = 'An ORM that strives to eradicate N+1 issues.'
readme = 'README.md'
authors = [{name = 'Maxime Toussaint', email = 'm.toussaint@mail.com'}]
license = {file = 'LICENSE'}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["orm", "database"]
dependencies = ["python-dotenv"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/MaxDude132/RogueORM"

# [project.scripts]
# realpython = "reader.__main__:main"

[tool.bumpver]
current_version = "2022.1001-alpha"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

